Setup styles for virtual keyboard and mobile compatibility

--- a/public/index.html
+++ b/public/index.html
@@ -18,36 +18,36 @@
 
     <div id="keyboard-cont">
         <div class="first-row">
-            <button class="keyboard-button">q</button>
-            <button class="keyboard-button">w</button>
-            <button class="keyboard-button">e</button>
-            <button class="keyboard-button">r</button>
-            <button class="keyboard-button">t</button>
-            <button class="keyboard-button">y</button>
-            <button class="keyboard-button">u</button>
-            <button class="keyboard-button">i</button>
-            <button class="keyboard-button">o</button>
-            <button class="keyboard-button">p</button>
+            <button class="keyboard-button" id="q">q</button>
+            <button class="keyboard-button" id="w">w</button>
+            <button class="keyboard-button" id="e">e</button>
+            <button class="keyboard-button" id="r">r</button>
+            <button class="keyboard-button" id="t">t</button>
+            <button class="keyboard-button" id="y">y</button>
+            <button class="keyboard-button" id="u">u</button>
+            <button class="keyboard-button" id="i">i</button>
+            <button class="keyboard-button" id="o">o</button>
+            <button class="keyboard-button" id="p">p</button>
         </div>
         <div class="second-row">
-            <button class="keyboard-button">a</button>
-            <button class="keyboard-button">s</button>
-            <button class="keyboard-button">d</button>
-            <button class="keyboard-button">f</button>
-            <button class="keyboard-button">g</button>
-            <button class="keyboard-button">h</button>
-            <button class="keyboard-button">j</button>
-            <button class="keyboard-button">k</button>
-            <button class="keyboard-button">l</button>
+            <button class="keyboard-button" id="a">a</button>
+            <button class="keyboard-button" id="s">s</button>
+            <button class="keyboard-button" id="d">d</button>
+            <button class="keyboard-button" id="f">f</button>
+            <button class="keyboard-button" id="g">g</button>
+            <button class="keyboard-button" id="h">h</button>
+            <button class="keyboard-button" id="j">j</button>
+            <button class="keyboard-button" id="k">k</button>
+            <button class="keyboard-button" id="l">l</button>
         </div>
         <div class="third-row">
-            <button class="keyboard-button">z</button>
-            <button class="keyboard-button">x</button>
-            <button class="keyboard-button">c</button>
-            <button class="keyboard-button">v</button>
-            <button class="keyboard-button">b</button>
-            <button class="keyboard-button">n</button>
-            <button class="keyboard-button">m</button>
+            <button class="keyboard-button" id="z">z</button>
+            <button class="keyboard-button" id="x">x</button>
+            <button class="keyboard-button" id="c">c</button>
+            <button class="keyboard-button" id="v">v</button>
+            <button class="keyboard-button" id="b">b</button>
+            <button class="keyboard-button" id="n">n</button>
+            <button class="keyboard-button" id="m">m</button>
         </div>
     </div>
 
